--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>pits</name>
-	<description>Demo project for Spring Boot</description>
+	<description>PiTS - Pi Temperature Server</description>
 
 	<parent>
         <groupId>org.springframework.boot</groupId>
